--- a/Demo/HorzPickerTestApp-Info.plist
+++ b/Demo/HorzPickerTestApp-Info.plist
@@ -24,7 +24,7 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSMainNibFile</key>
-	<string>MainWindow</string>
+	<key>UIMainStoryboardFile</key>
+	<string>MainStoryboard</string>
 </dict>
 </plist>
